test/compile_error/redefined.conf.7.def
config redefined_conf {
	int : int;
}
